# ATMApp

./: .env.example  .gitignore  2FA_DISABLE_VISUAL_GUIDE.md  2FA_STATUS_DISPLAY_FIX.md  AI_ASSISTANT_ACTIONABLE_FEATURE.md  AI_ASSISTANT_CONTEXT_AWARE_UPDATE.md  AI_ASSISTANT_POPUP_FEATURE.md  AI_DELIVERY_FLOW_FEATURE.md  AI_DELIVERY_FLOW_VISUAL_GUIDE.md  AI_MODEL_INTEGRATION_SUMMARY.md  AI_MODEL_SELECTION_FEATURE.md  ALL_AGENTS_CONTEXT_UPDATE_COMPLETE.md  API_DOCUMENTATION_FEATURE.md  API_KEYS_SETUP.md  AUTO_SLUG_FEATURE.md  BDD_SETUP_SUMMARY.md  CANVAS_PANNING_FEATURE.md  CANVAS_PAN_AUTO_SAVE_FEATURE.md  CANVAS_PAN_PERSISTENCE_FIX_DEBOUNCED.md  CANVAS_TOOLBAR_UPDATE.md  CANVAS_VIEW_SETTINGS_FEATURE.md  CHAT_IMPLEMENTATION_STATUS.md  CHAT_OVERLAY_SIZE_UPDATE.md  CHAT_OVERLAY_UPDATE.md  COMMUNITY_ACCESS_SUMMARY.md  COMMUNITY_ASSIGNMENT_FIX.md  COMMUNITY_DASHBOARD_FEATURE.md  COMMUNITY_LEAD_COMPLETE.md  COMMUNITY_LEAD_ROLE.md  COMMUNITY_LEAD_SUMMARY.md  COMMUNITY_PAGES_ADMIN_LAYOUT.md  COMMUNITY_PAGES_SCROLLABLE_FIX.md  COMPONENT_RENAME_UPDATE.md  CONFIG_GUIDE.md  COST_OPTIMIZATION_GUIDE.md  CYPRESS_BDD_GUIDE.md  DATABASE_MIGRATION_COMPLETE.md  DRAG_DROP_SMOOTH_UPDATE.md  ELEVATOR_ZONE_SIZE_AND_ENTRANCES.md  FEATURE_FLAGS_IMPLEMENTATION.md  (+83 more)
backend/: .env.example  .env.template  Dockerfile  _check_db.py  _get_token.py  assign_communities.py  backup_manager.py  create_org_users.py  create_role_test_users.py  create_simple_agents.py  inspect_db.py  main.py  messaging_routes.py  migrate_projects.py  migrate_subscription_plans.py  pyproject.toml  quick_backup.sh  quick_restore.sh  (+2 more)
(+209 files in other folders)
