[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "testmanager-backend"
version = "0.1.0"
description = "TestManager API — backend FastAPI"
requires-python = ">=3.9"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0",
    "python-multipart>=0.0.9",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.4",

    # Docker SDK (pentru runner)
    "docker>=7.1.0",

    # HTTP client (pentru MCP / GitHub API)
    "httpx>=0.27.0",

    # WebSocket
    "websockets>=12.0",

    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
